[gd_scene load_steps=7 format=3 uid="uid://cqwyusw6vcq3d"]

[ext_resource type="Script" path="res://assets/gui/main.gd" id="1_4q3pa"]
[ext_resource type="Texture2D" uid="uid://edb4rit2nkw2" path="res://assets/important/logo.png" id="1_ouiih"]
[ext_resource type="LabelSettings" uid="uid://1phn4kwkxmof" path="res://assets/gui/label_settings.tres" id="2_67h0h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bd7tv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fohwf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_so6lc"]

[node name="main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4q3pa")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2

[node name="start" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../quit")
theme_override_styles/focus = SubResource("StyleBoxTexture_bd7tv")
flat = true

[node name="start_label" type="Label" parent="VBoxContainer/start"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Start"
label_settings = ExtResource("2_67h0h")
horizontal_alignment = 1

[node name="options" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxTexture_fohwf")
flat = true

[node name="options_label" type="Label" parent="VBoxContainer/options"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Options"
label_settings = ExtResource("2_67h0h")
horizontal_alignment = 1

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../start")
theme_override_styles/focus = SubResource("StyleBoxTexture_so6lc")
flat = true

[node name="quit_label" type="Label" parent="VBoxContainer/quit"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Quit"
label_settings = ExtResource("2_67h0h")
horizontal_alignment = 1

[node name="logo" type="Sprite2D" parent="."]
scale = Vector2(0.507246, 0.5)
texture = ExtResource("1_ouiih")
centered = false

[connection signal="focus_entered" from="VBoxContainer/start" to="." method="_on_start_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/start" to="." method="_on_start_focus_exited"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="focus_entered" from="VBoxContainer/options" to="." method="_on_options_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/options" to="." method="_on_options_focus_exited"]
[connection signal="pressed" from="VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="focus_entered" from="VBoxContainer/quit" to="." method="_on_quit_focus_entered"]
[connection signal="focus_exited" from="VBoxContainer/quit" to="." method="_on_quit_focus_exited"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
